--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 
 <head>
+<script>
+  function play(){
+       var audio = document.getElementById("audio");
+       audio.play();
+                 }
+   </script>
 
     <meta charset="utf-8">
     <title>Who's funding the big three?</title>
@@ -40,14 +46,18 @@
     </header>
     <nav role="navigation">
         <ul>
-            <li><a href="#" role="button" class="pure-button switch" id="all-donations">All money</a>
+            <li><a href="#" role="button" class="pure-button switch" id="all-donations"><input type="button" value="PLAY"  onclick="play()">
+<audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio>All money</a>
           
             </li>
-            <li><a href="#" role="button" class="pure-button switch" id="group-by-money-source">The public's purse</a>
+            <li><a href="#" role="button" class="pure-button switch" id="group-by-money-source"> <input type="button" value="PLAY"  onclick="play()">
+<audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio>The public's purse</a>
             </li>
-            <li><a href="#" role="button" class="pure-button switch" id="group-by-party">Split by party</a>
+            <li><a href="#" role="button" class="pure-button switch" id="group-by-party"> <input type="button" value="PLAY"  onclick="play()">
+<audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio>Split by party</a>
             </li>
-            <li><a href="#" role="button" class="pure-button switch" id="group-by-donor-type">Split by type of donor</a>
+            <li><a href="#" role="button" class="pure-button switch" id="group-by-donor-type"><input type="button" value="PLAY"  onclick="play()">
+<audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio>Split by type of donor</a>
             </li>
         </ul>
     </nav>
