--- a/index.html
+++ b/index.html
@@ -46,18 +46,14 @@
     </header>
     <nav role="navigation">
         <ul>
-            <li><a href="#" role="button" class="pure-button switch" id="all-donations"><input type="button" value="PLAY"  onclick="play()">
-<audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio>All money</a>
+            <li><a href="#" role="button" class="pure-button switch" id="all-donations">All money</a>
           
             </li>
-            <li><a href="#" role="button" class="pure-button switch" id="group-by-money-source"> <input type="button" value="PLAY"  onclick="play()">
-<audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio>The public's purse</a>
+            <li><a href="#" role="button" class="pure-button switch" id="group-by-money-source">The public's purse</a>
             </li>
-            <li><a href="#" role="button" class="pure-button switch" id="group-by-party"> <input type="button" value="PLAY"  onclick="play()">
-<audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio>Split by party</a>
+            <li><a href="#" role="button" class="pure-button switch" id="group-by-party">Split by party</a>
             </li>
-            <li><a href="#" role="button" class="pure-button switch" id="group-by-donor-type"><input type="button" value="PLAY"  onclick="play()">
-<audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio>Split by type of donor</a>
+            <li><a href="#" role="button" class="pure-button switch" id="group-by-donor-type">Split by type of donor</a>
             </li>
         </ul>
     </nav>
